--- a/package.json
+++ b/package.json
@@ -8,19 +8,16 @@
     "queue": "nodemon src/queue.js"
   },
   "dependencies": {
-    "@sentry/node": "5.10.2",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.0",
-    "pg": "^7.18.1",
+    "mongoose": "^5.9.22",
+    "pipedrive": "^10.4.3",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
-    "youch": "^2.0.10",
+    "uuid": "^8.2.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
