--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
+    "mongodb": "^3.5.9",
     "mongoose": "^5.9.22",
     "pipedrive": "^10.4.3",
     "sequelize": "^5.21.2",
