--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "mongoose": "^5.9.22",
     "pipedrive": "^10.4.3",
     "sequelize": "^5.21.2",
-    "sequelize-cli": "^5.5.1",
-    "uuid": "^8.2.0",
-    "yup": "^0.27.0"
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
